--- a/ConiferApp/bin/ConiferApp.dll.config
+++ b/ConiferApp/bin/ConiferApp.dll.config
@@ -13,7 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="CadenaBD" value="Data Source=DESKTOP-8HQ6V4D\SQLEXPRESS;Initial Catalog=ConiferApp;Integrated Security=true" />
+    <add key="CadenaBD" value="Data Source=SAMSUNG\SQLEXPRESS;Initial Catalog=ConiferApp;Integrated Security=true" />
   </appSettings>
   <system.web>
     <authentication mode="Forms">
@@ -92,12 +92,11 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbUsuarios" connectionString="data source=DESKTOP-8HQ6V4D\SQLEXPRESS;Initial Catalog=ConiferApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="DbTiposIncidentes" connectionString="data source=DESKTOP-8HQ6V4D\SQLEXPRESS;initial catalog=ConiferApp;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="DbRoles" connectionString="data source=DESKTOP-8HQ6V4D\SQLEXPRESS;initial catalog=ConiferApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="DbPermisos" connectionString="data source=DESKTOP-8HQ6V4D\SQLEXPRESS;initial catalog=ConiferApp;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="CadenaBD" connectionString="Data Source=DESKTOP-8HQ6V4D\SQLEXPRESS;Initial Catalog=ConiferApp;Integrated Security=true" />
-    <add name="DbCantidadTarifasXlinea" connectionString="data source=DESKTOP-8HQ6V4D\SQLEXPRESS;initial catalog=ConiferApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbUsuarios" connectionString="data source=SAMSUNG\SQLEXPRESS;Initial Catalog=ConiferApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbTiposIncidentes" connectionString="data source=SAMSUNG\SQLEXPRESS;initial catalog=ConiferApp;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbRoles" connectionString="data source=SAMSUNG\SQLEXPRESS;initial catalog=ConiferApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbPermisos" connectionString="data source=SAMSUNG\SQLEXPRESS;initial catalog=ConiferApp;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CadenaBD" connectionString="Data Source=SAMSUNG\SQLEXPRESS;Initial Catalog=ConiferApp;Integrated Security=true" />
   </connectionStrings>
   <system.codedom>
     <compilers>
